# tele-bridge

./: pyproject.toml  todo.txt
src/: __init__.py  base.py  client.py  dispatcher.py  register.py
src/api_hash_generator/: app.py  requirements.txt
src/api_hash_generator/src/: api_data.py  json_proxy.py
src/bases/: client.py  client_object.py  message.py  mixins.py  try_get.py
src/pyro/: client.py  client_object.py  message.py  try_get.py  utils.py
src/tele/: client.py  client_object.py  message.py  try_get.py  utils.py
tele_bridge/: __init__.py  base.py  dispatcher.py  methods.py
tele_bridge/api_hash_generator/: app.py  config.ini
tele_bridge/api_hash_generator/src/: pyro_conversation.py
tele_bridge/bases/: account.py  client.py  client_object.py  client_params.py  message.py  mixins.py  proxy.py  try_get.py
tele_bridge/pyro/: client.py  client_object.py  message.py  try_get.py  utils.py
tele_bridge/routers/: __init__.py
tele_bridge/routers/crud/: __init__.py  create.py  delete.py  get.py  update.py
tele_bridge/sessions/: tele_bridge_session.py
tele_bridge/tele/: client.py  client_object.py  message.py  try_get.py  utils.py
